# jax-mlx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: CMakeLists.txt  benchmark_cnn.jl  benchmark_cnn.py  benchmark_mlp.jl  benchmark_mlx_native.py  benchmark_rnn.jl  benchmark_transformer.jl  mlx_cpp_benchmark.cpp
docs/: ARCHITECTURE.md
src/: jax_mlx_pjrt.cpp  mlx_mlir_parser.h  mlx_pjrt_types.h
src/jax_mlx/: __init__.py  parser.py  plugin.py
tests/: test_exhaustive.py
